# vocabulink

./: .gitignore  Flashcard.lhs  LICENSE.md  Makefile  README  README.markdown  Vocabulink.lhs  builder.sh  default.nix  flashcard-microformat  flashcard.lhs  flashcard.sql  notes  vocabulink.org.bak  vocabulink.sql  xhtml-unicode.patch
Flashcard/: Pages.lhs
Vocabulink/: CGI.lhs  Card.lhs  DB.lhs  Dispatch.lhs  Html.lhs  Lexeme.lhs  Link.lhs  Member.lhs  Pages.lhs  Review.lhs  Utils.lhs
Vocabulink/Review/: Html.lhs
articles/: Makefile  api.muse  conventions-for-link-word-stories.markdown  conventions-for-link-word-stories.muse  copyrights.muse  disclaimer.muse  help.muse  how-do-linkword-mnemonics-work.markdown  how-do-linkword-mnemonics-work.muse  how-does-spaced-repetition-work.markdown  how-does-spaced-repetition-work.muse  how-to-get-started-with-vocabulink.muse  how-to-practice-with-a-conversation-partner.markdown  how-to-write-a-memorable-mnemonic-story.markdown  how-to-write-a-memorable-mnemonic-story.muse  muse-init.el  privacy.markdown  privacy.muse  shortcuts-for-learning-a-language.markdown  source.markdown  source.muse  template.html  terms-of-use.markdown  terms-of-use.muse  understanding-link-types.markdown  understanding-link-types.muse  welcome-member.muse  welcome-non-member.muse  welcome.muse  why-learn-with-vocabulink.muse  why-study-words-in-order-of-frequency.markdown  why-study-words-in-order-of-frequency.muse
cgi/: Makefile  README  Vocabulink.hs  Vocabulink.lhs  vocabulink.cabal
cgi/Vocabulink/: App.hs  App.lhs  Article.hs  Article.lhs  CGI.hs  CGI.lhs  Comment.hs  Comment.lhs  Config.hs  Config.lhs  DB.lhs  Dashboard.hs  Form.lhs  Forum.hs  Forum.lhs  Html.hs  Html.lhs  Link.hs  Link.lhs  Member.hs  Member.lhs  Metrics.hs  Page.hs  Page.lhs  Rating.lhs  Reader.hs  Review.hs  Review.lhs  Search.hs  Search.lhs  Support.hs  Utils.hs  Utils.lhs
cgi/Vocabulink/Article/: Html.hs
cgi/Vocabulink/Link/: Frequency.hs  Html.hs  Pronunciation.hs  Story.hs
cgi/Vocabulink/Member/: Auth.hs  AuthToken.lhs  AuthToken.lhs-boot  Html.hs  Page.hs  Registration.hs
cgi/Vocabulink/Review/: Html.lhs  SM2.hs  SM2.lhs
conf.d/: vocabulink-fcgi
css/: Makefile  article.ccss  article.sass  article.styl  comment.ccss  comment.sass  comment.styl  common.ccss  common.sass  common.styl  dashboard.sass  dashboard.styl  forum.ccss  forum.sass  front.sass  front.styl  ie.css  jquery-loadmask.sass  jquery.simplemodal.sass  jquery.toastmessage.sass  learn.sass  lib.sass  lib.styl  link-common.sass  link-editor.ccss  link-editor.sass  link-graph.ccss  link.ccss  link.sass  link.styl  loadmask.styl  markitup-set.sass  markitup-skin.sass  markitup.styl  member-page.sass  member-page.styl  metrics.sass  page.ccss  page.sass  reader.sass  (+8 more)
etc/: cherokee.conf  crontab  lighttpd.conf  lighttpd.staging.conf  vocabulink.conf.example
etc/sv/lighttpd/: run
etc/sv/postgresql/: run
etc/sv/vocabulink.cgi/: run
etc/sv/vocabulink.cgi/log/: config  run
hamlet/: frontpage.hamlet
handbook/: Makefile  handbook.tex
handbook/chapters/: backups.tex  clients.tex  css.tex  javascript.tex  links.tex  modules.tex  preface.tex  review.tex  security.tex  time.tex  widgets.tex
hs/: Vocabulink.hs  default.nix  vocabulink.cabal
hs/Vocabulink/: API.hs  Article.hs  CGI.hs  Comment.hs  Env.hs  Html.hs  Link.hs  Member.hs  Page.hs  Reader.hs  Review.hs  Utils.hs
hs/Vocabulink/Member/: Html.hs  Registration.hs
hs/Vocabulink/Review/: SM2.hs
img/icon/: forum
init.d/: vocabulink-fcgi
js/: Makefile  ajax.js  comment.js  common.js  dashboard.js  form.js  forum-comment.js  forum.js  functional.js  jquery.html5form.js  jquery.markitup.js  learn.js  link-editor.js  link-graph.js  link.js  loggedin.js  loggedout.js  markitup.set.js  member-page.js  member.js  metrics.js  password-reset.js  purchase.js  reader.js  review.js  star-rating.js  to-function.js  toast.js  upload.js
mockups/: forum.html  template.html
mockups/forum/: welcome-to-vocabulink.html
mockups/forum/welcome-to-vocabulink/: 1-announcement-welcome-to-vocabulink-getting-started.html
offline/: index.html  offline.js  offline.sass  vocabulink-v1.appcache
s/: audio  css  js
scripts/: backup-database-to-s3.sh  crontab  fetch-pronunciation.sh  populate-pronunciations  restore-latest-database-backup-from-s3.sh  rotate-backups.sh  stats
static/: Makefile  copyrights.muse  disclaimer.muse  help.muse  muse-init.el  privacy.muse
tests/: Makefile  web.lhs
vhosts/: s.vocabulink.com  www.vocabulink.com
vocabulink.cgi/: Makefile  README  Setup.lhs  Vocabulink.lhs  vocabulink.cabal  vocabulink.sql
vocabulink.cgi/Vocabulink/: App.lhs  Article.lhs  CGI.lhs  Comment.lhs  DB.lhs  Forum.lhs  Html.lhs  Lexeme.lhs  Link.lhs  Member.lhs  Member.lhs-boot  Rating.lhs  Review.lhs  Review.lhs-boot  Search.lhs  Utils.lhs  Widget.lhs
vocabulink.cgi/Vocabulink/Link/: Types.lhs
vocabulink.cgi/Vocabulink/Member/: Auth.lhs  Auth.lhs-boot  AuthToken.lhs  AuthToken.lhs-boot
vocabulink.cgi/Vocabulink/Review/: Html.lhs  SM2.lhs
vocabulink.cgi/Vocabulink/Widget/: MyLinks.lhs
vocabulink.com/s/: article.css  lexeme.css  link.css  link.js  page.css  reset.css  review.js
