Name:          Vocabulink
Version:       2011.5.14
Cabal-Version: >= 1.2
License:       OtherLicense
License-File:  COPYING
Copyright:     2008, 2009, 2010, 2011 Chris Forno
Author:        Chris Forno (jekor)
Maintainer:    jekor@jekor.com
Stability:     stable
Bug-Reports:   jekor@jekor.com
Homepage:      http://www.vocabulink.com/source
Category:      Education
Synopsis:      a web application for learning languages through fiction (mnemonics)
Description:   This is Vocabulink, the SCGI program that handles all web
               requests for http://www.vocabulink.com/. The site helps people
               learn languages through fiction. It provides a mnemonics
               database, spaced repition (review) tools, and a forum for
               learners to collaborate.
Tested-With:   GHC == 6.12.3
Build-Type:    Custom

Executable vocabulink.cgi
  Main-Is:       Vocabulink.hs
  Build-Depends: applicative-extras,
                 base >= 4,
                 blaze-html,
                 bytestring,
                 cgi,
                 ConfigFile,
                 directory,
                 download-curl,
                 filepath,
                 formlets >= 0.7,
                 gravatar,
                 hamlet >= 0.7,
                 json,
                 MissingH,
                 mtl,
                 nano-hmac,
                 network,
                 old-locale,
                 old-time,
                 pandoc >= 1.8,
                 parsec,
                 process,
                 random,
                 regex-compat,
                 regex-tdfa,
                 scgi >= 0.3.1,
                 split,
                 template-haskell,
                 templatepg >= 0.2,
                 time,
                 unix,
                 utf8-string
  Extensions:    TypeSynonymInstances,
                 GeneralizedNewtypeDeriving,
                 TemplateHaskell,
                 OverloadedStrings
  GHC-Options:   -Wall -fno-warn-type-defaults -threaded -O2
