Name:          Vocabulink
Version:       2012.3.28
Cabal-Version: >= 1.2
License:       OtherLicense
License-File:  ../COPYING
Copyright:     2008, 2009, 2010, 2011, 2012 Chris Forno
Author:        Chris Forno (jekor)
Maintainer:    jekor@jekor.com
Stability:     stable
Bug-Reports:   jekor@jekor.com
Homepage:      http://www.vocabulink.com/source
Category:      Education
Synopsis:      a web application for learning languages through fiction (mnemonics)
Description:   This is Vocabulink, the SCGI program that handles all web
               requests for http://www.vocabulink.com/. The site helps people
               learn languages through fiction. It provides a mnemonics
               database, spaced repition (review) tools, and a forum for
               learners to collaborate.
Tested-With:   GHC == 7.0.2
Build-Type:    Simple

Executable vocabulink.cgi
  Main-Is:       Vocabulink.hs
  Build-Depends: aeson,
                 aeson-qq,
                 applicative-extras,
                 base >= 4,
                 blaze-html >= 0.4,
                 bytestring,
                 cgi >= 3001.1.8.2,
                 ConfigFile,
                 directory,
                 filepath,
                 gravatar,
                 MissingH,
                 mtl,
                 network,
                 old-locale,
                 old-time,
                 pandoc >= 1.8,
                 parsec,
                 process,
                 random,
                 regex-compat,
                 regex-tdfa,
                 scgi >= 0.3.1,
                 SHA,
                 split,
                 template-haskell,
                 templatepg >= 0.2,
                 text,
                 time,
                 unix,
                 utf8-string,
                 utility-ht
  Extensions:    TypeSynonymInstances,
                 GeneralizedNewtypeDeriving,
                 TemplateHaskell,
                 OverloadedStrings,
                 QuasiQuotes
  GHC-Options:   -Wall -fno-warn-type-defaults -threaded -O2
