Name:          Vocabulink
Version:       2012.11.23
Cabal-Version: >= 1.2
License:       OtherLicense
License-File:  ../COPYING
Copyright:     2008, 2009, 2010, 2011, 2012 Chris Forno
Author:        Chris Forno (jekor)
Maintainer:    jekor@jekor.com
Stability:     stable
Bug-Reports:   jekor@jekor.com
Homepage:      http://www.vocabulink.com/source
Category:      Education
Synopsis:      a web application for learning languages through fiction (mnemonics)
Description:   This is Vocabulink, the SCGI program that handles all web
               requests for http://www.vocabulink.com/. The site helps people
               learn languages through fiction. It provides a mnemonics
               database, spaced repition (review) tools, and a forum for
               learners to collaborate.
Tested-With:   GHC == 7.4.2
Build-Type:    Simple

Executable vocabulink.cgi
  Main-Is:       Vocabulink.hs
  Build-Depends: aeson >= 0.6,
                 aeson-qq,
                 applicative-extras,
                 base >= 4,
                 blaze-html >= 0.4.3 && < 0.5,
                 bytestring,
                 cgi >= 3001.1.8.2,
                 ConfigFile,
                 containers,
                 data-default,
                 directory,
                 filepath,
                 gravatar,
                 MissingH,
                 mtl,
                 network,
                 old-locale,
                 old-time,
                 pandoc >= 1.8,
                 parsec,
                 process,
                 random,
                 regex-compat,
                 scgi >= 0.3.1,
                 SHA,
                 split,
                 template-haskell,
                 templatepg >= 0.2.2,
                 text,
                 time,
                 tuple,
                 unix,
                 utf8-string,
                 utility-ht,
                 vector
  Extensions:    ConstraintKinds,
                 FlexibleInstances,
                 GeneralizedNewtypeDeriving,
                 OverloadedStrings,
                 TemplateHaskell,
                 TypeSynonymInstances,
                 QuasiQuotes,
                 DisambiguateRecordFields
  GHC-Options:   -Wall -fno-warn-type-defaults -fno-warn-unused-do-bind -threaded -O2
