Name:          Vocabulink
Version:       2013.5.16
Cabal-Version: >= 1.2
License:       OtherLicense
License-File:  COPYING
Copyright:     2008, 2009, 2010, 2011, 2012, 2013 Chris Forno
Author:        Chris Forno (jekor)
Maintainer:    jekor@jekor.com
Stability:     stable
Bug-Reports:   jekor@jekor.com
Homepage:      http://www.vocabulink.com/source
Category:      Education
Synopsis:      a web application for learning languages through fiction (mnemonics)
Description:   This is Vocabulink, the SCGI program that handles all web
               requests for http://www.vocabulink.com/. The site helps people
               learn languages through fiction. It provides a mnemonics
               database ordered by word frequency and a spaced repetition
               (review) tool.
Tested-With:   GHC == 7.6.3
Build-Type:    Simple

Executable vocabulink.cgi
  Main-Is:       Vocabulink.hs
  Build-Depends: aeson >= 0.6,
                 aeson-qq,
                 applicative-extras,
                 base >= 4,
                 blaze-builder,
                 blaze-html >= 0.6,
                 blaze-markup,
                 bytestring >= 0.10,
                 cgi,
                 cookie,
                 ConfigFile,
                 containers,
                 convertible,
                 cookie,
                 data-default,
                 directory,
                 either,
                 filepath,
                 hashmap,
                 MissingH,
                 mtl,
                 MonadCatchIO-mtl,
                 network,
                 network-uri,
                 old-locale,
                 old-time,
                 pandoc > 1.8,
                 parsec,
                 process,
                 pureMD5,
                 random,
                 SHA,
                 split,
                 sscgi >= 0.3.0,
                 stripe,
                 syb,
                 template-haskell,
                 templatepg >= 0.2.6,
                 text,
                 time,
                 tuple,
                 unix,
                 utf8-string,
                 utility-ht,
                 vector
  Extensions:    FlexibleInstances,
                 GeneralizedNewtypeDeriving,
                 OverloadedStrings,
                 TemplateHaskell,
                 TypeSynonymInstances,
                 QuasiQuotes,
                 DisambiguateRecordFields,
                 DeriveDataTypeable,
                 ImplicitParams,
                 RankNTypes
  GHC-Options:   -Wall -fno-warn-missing-signatures -fno-warn-type-defaults -fno-warn-unused-do-bind -threaded -O2
