Name:          Vocabulink
Version:       0
Cabal-Version: >= 1.2
License:       OtherLicense
License-File:  COPYING
Copyright:     2008, 2009, 2010, 2011, 2012, 2013, 2015 Chris Forno
Author:        Chris Forno (jekor)
Maintainer:    jekor@jekor.com
Stability:     stable
Bug-Reports:   jekor@jekor.com
Homepage:      http://www.vocabulink.com/source
Category:      Education
Synopsis:      a web application for learning languages through fiction (mnemonics)
Description:   This is Vocabulink, the SCGI program that handles all web
               requests for http://www.vocabulink.com/. The site helps people
               learn languages through fiction. It provides a mnemonics
               database ordered by word frequency and a spaced repetition
               (review) tool.
Tested-With:   GHC == 7.10.2
Build-Type:    Simple

Executable vocabulink.cgi
  Main-Is:       Vocabulink.hs
  Build-Depends: aeson >= 0.6,
                 aeson-qq,
                 applicative-extras,
                 base >= 4,
                 blaze-builder,
                 blaze-html >= 0.6,
                 blaze-markup,
                 bytestring >= 0.10,
                 cgi,
                 ConfigFile,
                 containers,
                 convertible,
                 cookie,
                 data-default,
                 directory,
                 either,
                 exceptions,
                 filepath,
                 hashmap,
                 MissingH,
                 mtl,
                 network,
                 network-uri,
                 old-time,
                 pandoc > 1.8,
                 parsec,
                 postgresql-typed,
                 process,
                 pureMD5,
                 random,
                 SHA,
                 split,
                 sscgi >= 0.3.1,
                 syb,
                 template-haskell,
                 text,
                 time,
                 tuple,
                 unix,
                 utf8-string,
                 utility-ht,
                 vector
  Default-Extensions:  AllowAmbiguousTypes,
                       DataKinds,
                       DeriveAnyClass,
                       -- DeriveGeneric,
                       -- ExtendedDefaultRules,
                       FlexibleContexts,
                       FlexibleInstances,
                       -- FunctionalDependencies,
                       ImplicitParams,
                       LambdaCase,
                       MultiParamTypeClasses,
                       MultiWayIf,
                       NegativeLiterals,
                       NoMonomorphismRestriction,
                       OverloadedStrings,
                       -- ParallelListComp,
                       PartialTypeSignatures,
                       QuasiQuotes,
                       RankNTypes,
                       ScopedTypeVariables,
                       TemplateHaskell,
                       TupleSections,
                       TypeSynonymInstances
                       -- TypeFamilies,
                       -- TypeOperators,
                       -- ViewPatterns
  GHC-Options:   -Wall -fno-warn-missing-signatures -fno-warn-type-defaults -fno-warn-unused-do-bind -fno-warn-orphans -fno-warn-missing-home-modules -threaded -O2
